--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,7 +11,7 @@ body {
 h1 {
     margin-top: 0px;
     font-family: 'sacramento',cursive;
-    font-size: 562%;
+    font-size: 5.62rem;
 }
 .description {
     font-family: 'Orbitron',fantasy;
@@ -60,5 +60,13 @@ h3 {
 .link {
     width: 30px;
     margin: 10px;
+}
+hr {
+  width: 60px;
+  border-width: 5px 0px 0px 0px;
+  display: 0px;
+  border-style: solid;
+  border-color: cadetblue
+ 
 }
 
