--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,11 +58,11 @@ h3 {
     margin-top: 20px;
 }
 .link {
-    width: 30px;
+    width: 65px;
     margin: 10px;
 }
 hr {
-  width: 60px;
+  width: 30%;
   border-width: 5px 0px 0px 0px;
   display: 0px;
   border-style: solid;
