--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     text-align: center;
     font-family: 'Merriweather', serif;
-    background-color: darkcyan;
+    background-color: seagreen;
 }
 .top-container {
     position: relative;
