--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,16 +2,20 @@ body {
     margin: 0px;
     text-align: center;
     font-family: 'Merriweather', serif;
-    background-color: seagreen;
+    background-color: darkcyan;
 }
 .top-container {
     position: relative;
     padding-top: 100px;
-}   
+}  
+p {
+  line-height: 2;
+}
 h1 {
     margin-top: 0px;
     font-family: 'sacramento',cursive;
     font-size: 5.62rem;
+    
 }
 .description {
     font-family: 'Orbitron',fantasy;
@@ -56,17 +60,56 @@ h3 {
 }
 .bottom-container {
     margin-top: 20px;
+    padding: 40px 0 20px;
+    background-color: cadetblue
 }
 .link {
     width: 65px;
     margin: 10px;
 }
 hr {
+  margin-top: 100px;
+  margin-bottom: 100px;
   width: 30%;
   border-width: 5px 0px 0px 0px;
   display: 0px;
   border-style: solid;
   border-color: cadetblue
+  
  
 }
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: "Montserrat", Georgia;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+.intro {
+  width: 50%;
+  margin: auto;
+}
+.contact {
+  margin: 10px auto 30px;
+  width: 50%;
+  
+}
