--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,9 +5,7 @@ body {
     background-color: lightgreen;
 }
 .top-container {
-    position: relative;
     padding-top: 100px;
-    background-color: seagreen;
 }  
 p {
   line-height: 3;
@@ -119,3 +117,31 @@ hr {
   width: 50%;
   background-color: ligh;
 }
+.btnsty {
+    background: mediumseagreen;
+    background-image: -webkit-linear-gradient(top, mediumseagreen, seagreen);
+    background-image: -moz-linear-gradient(top, mediumseagreen, seagreen);
+    background-image: -ms-linear-gradient(top, mediumseagreen, seagreen);
+    background-image: -o-linear-gradient(top, mediumseagreen, seagreen);
+    background-image: linear-gradient(to bottom, mediumseagreen, seagreen);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    position: fixed;
+    right: 50px;
+    top: 580px;
+  }
+  .btnsty:hover {
+    background: #66d68d;
+    background-image: -webkit-linear-gradient(top, #66d68d, #44db74);
+    background-image: -moz-linear-gradient(top, #66d68d, #44db74);
+    background-image: -ms-linear-gradient(top, #66d68d, #44db74);
+    background-image: -o-linear-gradient(top, #66d68d, #44db74);
+    background-image: linear-gradient(to bottom, #66d68d, #44db74);
+    text-decoration: none;
+  }
